[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pin-versions"
dynamic = ["version"]
description = "Pin all dependencies in pyproject.toml to their currently installed versions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Jay Miller"},
]
dependencies = [
    "tomlkit==0.14.0",
    "click==8.3.1",
    "httpx==0.28.1",
    "rich==14.3.3",
]

[project.scripts]
pin-versions = "pin_versions:main"

[dependency-groups]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-httpx==0.36.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools-scm]
local_scheme = "no-local-version"

